--- a/connected.html
+++ b/connected.html
@@ -31,11 +31,11 @@
     <div class='card-container'>
        <div class='card'>
             <h3>Wallet Address:</h3>
-            <p>0ojkkhgeddyuwwhfeeiiu7tt9huii002rru4ghhh3</p>
+            <p id="address"></p>
        </div>
        <div class='card'>
             <h3>Wallet Balance:</h3>
-            <p>1780754543667788854999</p>
+            <p id="balance">Loading...</p>
        </div>
     </div>
 
@@ -46,3 +46,5 @@
 	<script src="index.js"></script>
   </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
+<script src="connected.js"></script>
