--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
     <div class="txt-div">
       <p>DO YOU WANT TO</p>
       <div>
-        <a href="login.html"></a><button class="buy-btn">BUY</button></a>
+        <button class="buy-btn">BUY</button>
         <span> &#47;</span>
         <a href="login.html"><button class="sell-btn">SELL</button></a>
       </div>
