--- a/connectwallet.html
+++ b/connectwallet.html
@@ -36,7 +36,7 @@
            
             <p>
                 <button id="connect">
-                   <a href="connected.html"><img src='images/metamask-icon.png' alt='loading...' ></a> 
+                   <img src='images/metamask-icon.png' alt='loading...' > 
                     Metamask
                 </button>
             </p>
@@ -59,8 +59,8 @@
     </div>
        
     </main>
-	<script src="index.js"></script>
-  </body>
-</html>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
 <script src="connectwallet.js"></script>
+
+</body>
+</html>
