--- a/connectwallet.html
+++ b/connectwallet.html
@@ -35,10 +35,10 @@
             There are several wallet providers</p>
            
             <p>
-                <button id="connect">
+                <a href="connected.html"><button id="connect">
                    <img src='images/metamask-icon.png' alt='loading...' > 
                     Metamask
-                </button>
+                </button> </a>
             </p>
             <p>
                 <button>
