updated error message for uninstalled metamask wallet

--- a/connected.html
+++ b/connected.html
@@ -31,7 +31,7 @@
     <div class='card-container'>
        <div class='card'>
             <h3>Wallet Address:</h3>
-            <p id="address"></p>
+            <p id="address">Loading...</p>
        </div>
        <div class='card'>
             <h3>Wallet Balance:</h3>
